cluster/apps/weather/weather-exporter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-exporter
  namespace: weather-exporter
  labels:
    app: weather-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-exporter
  template:
    metadata:
      labels:
        app: weather-exporter
    spec:
      containers:
      - name: weather-exporter
        image: celliott/weather_exporter:latest
        ports:
        - containerPort: 9265
