cluster/apps/weather/weather-exporter/service-ipv6.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: exporters.kochhaus.net
    metallb.universe.tf/allow-shared-ip: exporters
  labels:
    app.kubernetes.io/instance: weather-exporter
    app.kubernetes.io/name: weather-exporter
  name: weather-exporter
  namespace: weather
spec:
  ipFamilies:
    - IPv6
  ipFamilyPolicy: SingleStack
  ports:
    - name: metrics
      port: 9265
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: weather-exporter
    app.kubernetes.io/name: weather-exporter
  type: LoadBalancer
