cluster/apps/weather/weather-exporter/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-exporter
  namespace: weather
  labels:
    app: weather-exporter
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - weather.${SECRET_DOMAIN}
  rules:
  - host: weather.${SECRET_DOMAIN}
    http:
      paths:
      - path: /weather-exporter
        pathType: Prefix
        backend:
          service:
            name: weather-exporter
            port:
              number: 9265
